--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/assets/frankoIcon.png" />
+    <link rel="icon" href="./frankoIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="../src/assets/frankoIcon.png" />
+    <meta name="description" content="Franko Trading Enterprise Website" />
+    <link rel="apple-touch-icon" href="./frankoIcon.png" />
+    <link rel="shortcut icon" href="./frankoIcon.png" type="image/png" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Franko Trading Enterprise</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
+
     <!-- Tawk.to Live Chat Integration -->
     <script type="text/javascript">
       var Tawk_API = Tawk_API || {},
