--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,28 @@
     <link rel="icon" href="./frankoIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Franko Trading Enterprise Website" />
+    <meta name="description" content="Franko Trading Enterprise | Your trusted source for quality gadgets, phones, laptops, and accessories in Ghana." />
     <link rel="apple-touch-icon" href="./frankoIcon.png" />
     <link rel="shortcut icon" href="./frankoIcon.png" type="image/png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Google SEO Meta Tags -->
+    <meta name="keywords" content="Franko Trading, gadgets, phones, laptops, electronics, accessories, Ghana, quality gadgets, affordable electronics" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Franko Trading Enterprise" />
+    <meta property="og:title" content="Franko Trading Enterprise" />
+    <meta property="og:description" content="Your trusted source for quality gadgets, phones, laptops, and accessories in Ghana." />
+    <meta property="og:image" content="./frankoIcon.png" />
+    <meta property="og:url" content="https://www.frankotrading.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Franko Trading Enterprise" />
+    <meta name="twitter:description" content="Your trusted source for quality gadgets, phones, laptops, and accessories in Ghana." />
+    <meta name="twitter:image" content="./frankoIcon.png" />
+
+    <!-- Google Verification Tag -->
+    <meta name="google-site-verification" content="YOUR_GOOGLE_VERIFICATION_CODE_HERE" />
+
     <title>Franko Trading Enterprise</title>
   </head>
   <body>
