--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Franko Trading Enterprise" />
     <meta property="og:title" content="Franko Trading Enterprise" />
-    <meta property="og:description" content="Your trusted source for quality gadgets, phones, laptops, and accessories in Ghana." />
+    <meta property="og:description" content="Your trusted source for quality gadgets, phones, laptops,electronics and accessories in Ghana." />
     <meta property="og:image" content="./frankoIcon.png" />
     <meta property="og:url" content="https://www.frankotrading.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Franko Trading Enterprise" />
-    <meta name="twitter:description" content="Your trusted source for quality gadgets, phones, laptops, and accessories in Ghana." />
+    <meta name="twitter:description" content="Your trusted source for quality gadgets, phones, laptops, electronics and accessories in Ghana." />
     <meta name="twitter:image" content="./frankoIcon.png" />
 
     <!-- Google Verification Tag -->
